address Gemini code review: rate limiter, JWT secret, stale cache, doc
- Fix Java 8 incompatibility: isBlank() -> trim().isEmpty() in
  RateLimitInterceptor (isBlank is Java 11+)
- Fix memory leak: replace ConcurrentHashMap<IP, Bucket> with a Caffeine
  cache (expireAfterAccess=2m, max=100k) so inactive IPs are evicted
- Fix JWT secret exposure: use ${JWT_SECRET:<dev-default>} so production
  deployments can inject the real secret via env var without changing code
- Fix stale token cache: add @CacheEvict(tokens, allEntries=true) to
  updateUser and updateUserWithPhoto so cached User objects are evicted
  immediately after any user write
- Fix doc: remove misleading spring.cache.caffeine.spec example; actual
  config is programmatic in CacheConfig.java

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>